--- a/index.html
+++ b/index.html
@@ -10,6 +10,29 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,900;1,300&display=swap" rel="stylesheet">
 </head>
 <body>
-
+    <header class="header">
+        <div class="wrapper header-contents">
+            <h2 class="header-logo">Header Logo</h2>
+            <nav class="header-nav">
+                <a href="">header link one</a>
+                <a href="">header link two</a>
+                <a href="">header link three</a>
+            </nav>
+        </div>
+    </header>
+    <div class="hero">
+        <div class="wrapper hero-contents">
+            <div class="hero-left">
+                <h1 class="hero-h1">This website is awesome</h1>
+                <p class="hero-p">This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</p>
+                <button class="sign-up-button">Sign up</button>
+            </div>
+            <div class="hero-right">
+                <div class="hero-placeholder">
+                    <p class="placeholder-text">this is a placeholder for an image</p>
+                </div>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
