--- a/index.html
+++ b/index.html
@@ -34,5 +34,28 @@
             </div>
         </div>
     </div>
+    <div class="information">
+        <div class="wrapper information-contents">
+            <h1 class="information-header">Some random information</h1>
+            <div class="information-row">
+                <div class="information-box">
+                    <div class="information-placeholder"></div>
+                    <p class="information-text">this is some subtext under an illustration or image</p>
+                </div>
+                <div class="information-box">
+                    <div class="information-placeholder"></div>
+                    <p class="information-text">this is some subtext under an illustration or image</p>
+                </div>
+                <div class="information-box">
+                    <div class="information-placeholder"></div>
+                    <p class="information-text">this is some subtext under an illustration or image</p>
+                </div>
+                <div class="information-box">
+                    <div class="information-placeholder"></div>
+                    <p class="information-text">this is some subtext under an illustration or image</p>
+                </div>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
