Added the quote section to the page.

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     </div>
     <div class="information">
         <div class="wrapper information-contents">
-            <h1 class="information-header">Some random information</h1>
+            <h1 class="information-header">Some random information.</h1>
             <div class="information-row">
                 <div class="information-box">
                     <div class="information-placeholder"></div>
@@ -55,6 +55,12 @@
                     <p class="information-text">this is some subtext under an illustration or image</p>
                 </div>
             </div>
+        </div>
+    </div>
+    <div class="quote-container">
+        <div class="wrapper quote">
+            <em>This is an inspiting quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.</em>
+            <strong>-Thor, God of Thunder</strong>
         </div>
     </div>
 </body>
