--- a/index.html
+++ b/index.html
@@ -63,5 +63,16 @@
             <strong>-Thor, God of Thunder</strong>
         </div>
     </div>
+    <div class="cta-container">
+        <div class="wrapper cta">
+            <div class="cta-text">
+                <h2>Call to action! It's time!</h2>
+                <p>Sign up for our product by clicking that button right over there!</p>
+            </div>
+            <div class="cta-button">
+                <button>Sign up</button>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
