--- a/index.html
+++ b/index.html
@@ -74,5 +74,8 @@
             </div>
         </div>
     </div>
+    <footer>
+        <p>Copyright © The odin Project 2021</p>
+    </footer>
 </body>
 </html>
